Further AuxiliumLib cleanup